x1549: support layout overrides in labware
Labware now has num_rows_override and num_columns_override
which may specify that the labware has a different layout from
that specified by its labware type.
I've tried to find all places that use labware type to consider
the layout of a piece of labware and update them.
I've also added numRows,numColumns to TissueBlockLabware,
which is part of a request to turn original samples into blocks.